--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('geometry', 'cpp', version : '0.1.0', default_options : ['warning_level=3', 'cpp_std=c++20'])
 
 includes      = include_directories('include')
-dependencies  = []
+dependencies  = [dependency('eigen3')]
 
 geometry = library(
   meson.project_name()
