--- a/tests/meson.build
+++ b/tests/meson.build
@@ -2,6 +2,6 @@ rapidcheck    = dependency('rapidcheck')
 gtest         = dependency('gtest')
 dependencies  = [gtest, rapidcheck, geometry_dep]
 
-basic = executable('basic', 'basic.cpp', dependencies: dependencies)
+bidimensional = executable('bidimensional', 'bidimensional.cpp', dependencies: dependencies)
 
-test('basic', basic)
+test('bidimensional', bidimensional)
