feat: implements tridimensional points

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -2,6 +2,8 @@ rapidcheck    = dependency('rapidcheck')
 gtest         = dependency('gtest')
 dependencies  = [gtest, rapidcheck, geometry_dep]
 
-bidimensional = executable('bidimensional', 'bidimensional.cpp', dependencies: dependencies)
+bidimensional   = executable('bidimensional', 'bidimensional.cpp', dependencies: dependencies)
+tridimensional  = executable('tridimensional', 'tridimensional.cpp', dependencies: dependencies)
 
-test('bidimensional', bidimensional)
+test( 'bidimensional',  bidimensional)
+test('tridimensional', tridimensional)
